move_right_commit_api_implementation

--- a/app/src/main/res/layout/dialog_fragment_log_last_night_sleep.xml
+++ b/app/src/main/res/layout/dialog_fragment_log_last_night_sleep.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_gravity="end"
-        android:src="@drawable/red_cross_btn" />
+        android:src="@drawable/new_cross_icon" />
 
     <!-- Title -->
     <TextView
