--- a/app/src/main/res/drawable/white_date_meal_bg.xml
+++ b/app/src/main/res/drawable/white_date_meal_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/dotted_red" />
+        android:color="@color/white" />
     <stroke
         android:color="@color/meal_log_date_border"
         android:width="1dp" />
