--- a/app/src/main/res/layout/fragment_sleep_stages.xml
+++ b/app/src/main/res/layout/fragment_sleep_stages.xml
@@ -735,31 +735,59 @@
                     app:layout_constraintStart_toEndOf="@+id/customProgressBarLightLayout" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
+            <androidx.cardview.widget.CardView
+                android:id="@+id/sleep_stage_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/dmsans_bold"
-                android:layout_marginTop="25dp"
-                android:id="@+id/tv_sleep_stage_title"
+                android:elevation="4dp"
+                android:background="@color/white"
+                app:cardCornerRadius="10dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:visibility="visible"
-                android:textColor="@color/on_track_color"
-                android:text=""
-                android:textSize="16sp" />
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+               >
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_sleep_stage_message"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="15dp"
-                android:visibility="visible"
-                android:textColor="@color/black_no_meals"
-                android:fontFamily="@font/dmsans_regular"
-                android:text=""
-                android:textSize="16sp" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="20dp">
+
+                    <TextView
+                        android:id="@+id/tv_sleep_stage_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:layout_marginTop="25dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:visibility="visible"
+                        android:textColor="@color/on_track_color"
+                        android:text="Sleep Stages"
+                        android:textSize="16sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_sleep_stage_message"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginTop="15dp"
+                        android:visibility="visible"
+                        android:textColor="@color/black_no_meals"
+                        android:fontFamily="@font/dmsans_regular"
+                        android:text="You had a good balance of light and deep sleep last night."
+                        android:textSize="16sp"
+                        app:layout_constraintTop_toBottomOf="@id/tv_sleep_stage_title"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
