--- a/app/src/main/res/layout/item_tools.xml
+++ b/app/src/main/res/layout/item_tools.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/tool_icon"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/add_affirmation"
         android:layout_marginEnd="10dp"/>
 
@@ -22,7 +22,9 @@
             android:id="@+id/tool_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:text="Tool Name"
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:fontFamily="@font/dmsans_medium"/>
 
@@ -30,10 +32,11 @@
             android:id="@+id/tool_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/dmsans_regular"
             android:text="Description"
             android:textSize="12sp"
-            android:textColor="@android:color/darker_gray"/>
+            android:textColor="@color/black"/>
     </LinearLayout>
         <ImageView
             android:id="@+id/tool_select_button"
