--- a/app/src/main/res/layout/fragment_rating_report_feedback_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_rating_report_feedback_bottom_sheet.xml
@@ -174,7 +174,7 @@
                     android:textSize="20sp"
                     android:textColor="@color/black_no_meals"
                     android:fontFamily="@font/dmsans_bold"
-                    android:text="Cancel"/>
+                    android:text="Skip"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -353,7 +353,7 @@
                     android:textSize="20sp"
                     android:textColor="@color/black_no_meals"
                     android:fontFamily="@font/dmsans_bold"
-                    android:text="Cancel"/>
+                    android:text="Skip"/>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
