--- a/app/src/main/res/layout/fragment_snap_meal_detect_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_snap_meal_detect_bottom_sheet.xml
@@ -7,57 +7,66 @@
     android:paddingBottom="20dp"
     style="@style/LoggedBottomSheetStyle">
 
+    <ImageView
+        android:id="@+id/closeIc"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:scaleType="fitXY"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/close_breathwork"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+    </ImageView>
+
     <TextView
-        android:id="@+id/deleteTitle"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_delete"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete Meal"
+        android:text="Couldn’t Detect A Meal"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:maxLines="2"
+        android:textSize="22sp"
         android:fontFamily="@font/merriweather_bold"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/deleteConfirmTv"
+        android:id="@+id/tv_delete_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Are you sure you want to delete this meal?"
+        android:text="We couldn’t find any food in this photo. Please snap a clear picture of your meal to log it."
         android:gravity="center"
-        android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textColor="@color/black_no_meals"
+        android:textSize="15sp"
         android:minLines="2"
         android:fontFamily="@font/dmsans_regular"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/deleteTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tv_delete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/deleteBtnLayout"
+        android:id="@+id/layout_delete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/deleteConfirmTv"
+        app:layout_constraintTop_toBottomOf="@+id/tv_delete_confirm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/yesBtn"
+            android:id="@+id/layoutDelete"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
@@ -66,10 +75,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/green_meal_bg"
             android:layout_marginBottom="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tv_yes"
+                android:id="@+id/tvDelete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
@@ -77,23 +88,26 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/dmsans_bold"
-                android:text="Yes"/>
+                android:text="Try Again"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/noBtn"
+            android:id="@+id/layoutCancel"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/yesBtn"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/layoutDelete"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/white_grey_meal_bg"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
             android:gravity="center">
 
@@ -106,18 +120,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_gravity="center"
                 android:textSize="20sp"
-                android:textColor="@color/txt_color_journal_date"
+                android:textColor="@color/black"
                 android:fontFamily="@font/dmsans_bold"
-                android:text="No"/>
+                android:text="Cancel"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <include
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        layout="@layout/loader_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
