--- a/app/src/main/res/layout/fragment_think_right_landing.xml
+++ b/app/src/main/res/layout/fragment_think_right_landing.xml
@@ -1937,12 +1937,22 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/lyt_top_header"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginEnd="20dp"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            android:paddingStart="16dp"
-                            android:paddingEnd="16dp"
-                            android:paddingTop="16dp">
+                           >
+
+                            <ImageView
+                                android:id="@+id/img_mind_icon"
+                                android:layout_width="17dp"
+                                android:layout_height="17dp"
+                                android:src="@drawable/think_mind_icon"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
 
                             <TextView
                                 android:id="@+id/tv_mind_audit"
@@ -1952,29 +1962,30 @@
                                 android:fontFamily="@font/dmsans_medium"
                                 android:textColor="@color/eatright_text_color"
                                 android:textSize="16sp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginStart="20dp"
+                                android:layout_marginStart="15dp"
                                 app:layout_constraintStart_toEndOf="@id/img_mind_icon"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
 
                             <ImageView
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
-                                android:layout_marginEnd="10dp"
-                                android:layout_marginTop="10dp"
                                 android:src="@drawable/forward_icon"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent" />
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"/>
 
-                            <ImageView
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:layout_marginStart="10dp"
-                                android:id="@+id/img_mind_icon"
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:background="@color/gray_light_bg"
                                 android:layout_marginTop="10dp"
-                                android:src="@drawable/think_mind_icon"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintStart_toStartOf="parent" />
+                                app:layout_constraintTop_toBottomOf="@+id/tv_mind_audit"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                >
+                            </View>
+
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -1982,6 +1993,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:visibility="gone"
+                            android:layout_marginTop="10dp"
                             app:layout_constraintTop_toBottomOf="@+id/lyt_top_header"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent">
@@ -1990,9 +2002,9 @@
                                 android:id="@+id/no_data_mind_audit_heading"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="18dp"
+                                android:textSize="21sp"
                                 android:fontFamily="@font/dmsans_bold"
-                                android:textColor="@color/black"
+                                android:textColor="@color/black_no_meals"
                                 android:text="Your Mental Vitals Matter"
                                 android:layout_marginStart="20dp"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -2003,8 +2015,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:padding="20dp"
+                                android:textSize="16sp"
                                 android:fontFamily="@font/dmsans_regular"
-                                android:textColor="@color/black"
+                                android:textColor="@color/black_no_meals"
                                 android:text="Anxiety, anger, stress —our clinical tools can help you track it all. Try one and take a real check-in."
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -2026,9 +2039,9 @@
                                 app:layout_constraintTop_toBottomOf="@id/no_data_mind_audit_description">
 
                                 <ImageView
-                                    android:layout_width="24dp"
-                                    android:layout_height="24dp"
-                                    android:src="@drawable/practice_icon" />
+                                    android:layout_width="15dp"
+                                    android:layout_height="15dp"
+                                    android:src="@drawable/checkbox_outline" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -2036,7 +2049,7 @@
                                     android:text="Assess your mental health"
                                     android:textSize="14sp"
                                     android:textColor="@color/eatright_text_color"
-                                    android:textStyle="bold"
+                                    android:fontFamily="@font/dmsans_bold "
                                     android:paddingStart="8dp" />
                             </LinearLayout>
 
