--- a/app/src/main/res/layout/item_card_view_ai.xml
+++ b/app/src/main/res/layout/item_card_view_ai.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:text="Functional Strength Training"
             android:textSize="14sp"
-            android:textColor="@color/black"
+            android:textColor="@color/black_no_meals"
             android:textStyle="normal"
             android:layout_marginStart="6dp"
             android:fontFamily="@font/dmsans_regular"
