Jira Bug Fixes RAD-5049 RAD-5047 RAD-5046 RAD-5017 RAD-5025 RAD-5037 RAD-5038 RAD-5040

--- a/app/src/main/res/layout/close_confirmation_bottomsheet.xml
+++ b/app/src/main/res/layout/close_confirmation_bottomsheet.xml
@@ -27,6 +27,7 @@
         android:layout_margin="20dp"
         android:fontFamily="@font/dmsans_regular"
         android:layout_gravity="center"
+        android:gravity="center"
         android:text="Your changes were not saved. You can still continue."
         android:textColor="@color/txt_color_header"
         android:textSize="14sp" />
