--- a/app/src/main/res/layout/activity_welcome_right_life_context_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_right_life_context_screen.xml
@@ -183,9 +183,9 @@
         <Button
             android:id="@+id/btnNext"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:text="Next"
-            android:textSize="14sp"
+            android:textSize="@dimen/textsize_large20sp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/dmsans_bold"
             android:textColor="@color/white"
