Following issues are resolved on 15 Oct 2025 1. RAD-5043: [Android][QA][Login Screen] Button should be disabled if no input in the username field 2. RAD-5045: [Android][QA][Goal Selection] Images are not aligned as per design 3. RAD-5044: [Android][QA][Goal Selection] Toast should appear when no goals or one goal is selected 4. RAD-5041: [Android][QA][Login Screen] Links to Privacy Policy and Terms & Conditions not tappable 5. RAD-5039: [Android][QA][Dashboard] Timeout toast notification when tapping multiple times on "My Health"

--- a/app/src/main/res/layout/activity_create_username.xml
+++ b/app/src/main/res/layout/activity_create_username.xml
@@ -91,6 +91,6 @@
         android:textSize="@dimen/textsize_large20sp"
         android:fontFamily="@font/dmsans_bold"
         android:textColor="@color/white"
-        android:backgroundTint="@color/menuselected"/>
+        android:backgroundTint="@color/rightlife"/>
 
 </LinearLayout>
