--- a/app/src/main/res/layout/activity_image_slider.xml
+++ b/app/src/main/res/layout/activity_image_slider.xml
@@ -82,6 +82,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="By signing up, I agree to RightLife’s Terms of Service &amp; Privacy Policy."
@@ -89,6 +90,7 @@
             android:gravity="center"
             android:fontFamily="@font/dmsans_regular"
             android:textSize="10sp"
+            android:textColor="#808080"
             android:layout_marginBottom="16dp" />
     </RelativeLayout>
 </ScrollView>
