--- a/app/src/main/res/layout/fragment_snap_meal.xml
+++ b/app/src/main/res/layout/fragment_snap_meal.xml
@@ -27,9 +27,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Snap Meal"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="@color/meal_log_title"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +207,7 @@
                     android:padding="15dp"
                     android:gravity="left"
                     android:background="@color/white"
-                    android:hint="Enter your meal description here."
+                    android:hint="For example: Paneer Bhurji, Chana Masala and 3 Rotis"
                     android:layout_marginTop="10dp"
                     android:visibility="visible"
                     android:fontFamily="@font/dmsans_regular"
