--- a/app/src/main/res/color/recipe_tab_color_selector.xml
+++ b/app/src/main/res/color/recipe_tab_color_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Selected Tab Text Color -->
-    <item android:color="@color/color_green" android:state_selected="true"/>
+    <item android:color="@color/white" android:state_selected="true"/>
     <!-- Unselected Tab Text Color -->
-    <item android:color="@color/tab_unselected_text"/>
+    <item android:color="@color/black_no_meals"/>
 </selector>
