--- a/app/src/main/res/color/tab_color_selector.xml
+++ b/app/src/main/res/color/tab_color_selector.xml
@@ -3,5 +3,5 @@
     <!-- Selected Tab Text Color -->
     <item android:color="@color/white" android:state_selected="true"/>
     <!-- Unselected Tab Text Color -->
-    <item android:color="@color/tab_unselected_text"/>
+    <item android:color="@color/black_no_meals"/>
 </selector>
