--- a/app/src/main/res/layout/item_recomendation.xml
+++ b/app/src/main/res/layout/item_recomendation.xml
@@ -15,7 +15,8 @@
 
     <FrameLayout
         android:layout_width="120dp"
-        android:layout_height="82dp">
+        android:layout_height="82dp"
+        android:layout_gravity="center">
 
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
@@ -32,14 +33,23 @@
                 android:src="@drawable/ic_gallry"
                 android:background="@drawable/rounded_white_image_bg"
                 android:contentDescription="Thumbnail" />
+
+            <View
+                android:layout_width="match_parent"
+                android:background="#BF000000"
+                android:layout_gravity="bottom"
+                android:layout_height="25dp">
+            </View>
         </androidx.cardview.widget.CardView>
 
         <ImageView
             android:id="@+id/overlayIcon"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="4dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginTop="28dp"
             android:src="@drawable/music_mini_icon"
             android:contentDescription="Overlay Icon" />
     </FrameLayout>
@@ -99,8 +109,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="The Personal Nature of Meaning"
-                android:fontFamily="@font/dmsans_bold"
-                android:textColor="@color/black"
+                android:fontFamily="@font/merriweather_bold"
+                android:textColor="@color/black_no_meals"
                 android:textSize="14sp"
                 android:paddingTop="0dp"
                 android:maxLines="2"
@@ -118,9 +128,10 @@
             android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:text="AshmithaVishnu   |   30"
-            android:textSize="11sp"
+            android:textSize="12sp"
+            android:fontFamily="@font/dmsans_regular"
             android:layout_marginStart="15dp"
-            android:textColor="@color/black"
+            android:textColor="@color/black_no_meals"
             android:paddingTop="1dp"
             android:paddingBottom="3dp"/>
         <TextView
@@ -128,9 +139,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="|"
-            android:textSize="12sp"
+            android:fontFamily="@font/dmsans_regular"
+            android:textSize="10sp"
             android:layout_marginStart="10dp"
-            android:textColor="@color/light_grey"
+            android:textColor="@color/recommendationText"
             android:paddingTop="1dp"
             android:paddingBottom="3dp"/>
         <TextView
@@ -140,8 +152,9 @@
             android:text="ghh"
             android:paddingStart="12dp"
             android:textSize="10sp"
+            android:fontFamily="@font/dmsans_regular"
             android:layout_marginStart="5dp"
-            android:textColor="@color/light_grey"
+            android:textColor="@color/recommendationText"
             android:paddingTop="1dp"
             android:paddingBottom="3dp"/>
         <TextView
@@ -149,9 +162,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="|"
-            android:textSize="12sp"
+            android:fontFamily="@font/dmsans_regular"
+            android:textSize="10sp"
             android:layout_marginStart="5dp"
-            android:textColor="@color/light_grey"
+            android:textColor="@color/recommendationText"
             android:paddingTop="1dp"
             android:paddingBottom="3dp"/>
         <TextView
@@ -159,10 +173,11 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:text="fhf"
+            android:fontFamily="@font/dmsans_regular"
             android:textSize="10sp"
             android:paddingStart="5dp"
             android:layout_marginStart="5dp"
-            android:textColor="@color/light_grey"
+            android:textColor="@color/recommendationText"
             android:paddingTop="1dp"
             android:paddingBottom="3dp"/>
     </LinearLayout>
@@ -172,5 +187,5 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:id="@+id/view_line"
-        android:background="@color/light_grey"/>
+        android:background="@color/view_border"/>
 </LinearLayout>
