--- a/app/src/main/res/layout/fragment_ideal_actual_sleep_time.xml
+++ b/app/src/main/res/layout/fragment_ideal_actual_sleep_time.xml
@@ -456,37 +456,59 @@
                         app:layout_constraintStart_toStartOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
-            <TextView
+            <androidx.cardview.widget.CardView
+                android:id="@+id/sleep_ideal_card_new"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/dmsans_bold"
-                android:layout_marginTop="25dp"
-                android:id="@+id/ideal_title"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:visibility="visible"
-                android:textColor="@color/black"
-                android:text=""
-                app:layout_constraintTop_toBottomOf="@+id/sleep_ideal_card"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="6dp"
+               app:layout_constraintTop_toBottomOf="@+id/sleep_ideal_card"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="16sp" />
+                app:layout_constraintEnd_toEndOf="parent">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/ideal_message"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="15dp"
-                android:visibility="visible"
-                android:textColor="@color/black"
-                android:fontFamily="@font/dmsans_regular"
-                android:text=""
-                app:layout_constraintTop_toBottomOf="@+id/ideal_title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="16sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/ideal_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textColor="@color/black"
+                        android:text=""
+                        android:textSize="16sp"
+                        android:layout_marginTop="8dp" />
+
+                    <TextView
+                        android:id="@+id/ideal_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/dmsans_regular"
+                        android:text=""
+                        android:textSize="16sp" />
+
+                    <!-- 🆕 New TextView added below -->
+                    <TextView
+                        android:id="@+id/ideal_extra_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/dmsans_regular"
+                        android:text="Extra information goes here"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
