--- a/app/src/main/res/layout/fragment_think_right_landing.xml
+++ b/app/src/main/res/layout/fragment_think_right_landing.xml
@@ -50,6 +50,7 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginEnd="12dp"
+            android:visibility="gone"
             android:id="@+id/view_download_icon"
             android:src="@drawable/eatright_download_icon"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -210,7 +211,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/eatright_text_color"
                         android:text="Mindfulness Metric"
-                        android:fontFamily="@font/dmsans_bold"
+                        android:fontFamily="@font/dmsans_semibold"
                         android:textSize="16sp"
                         android:layout_marginStart="6dp"
                         app:layout_constraintBottom_toBottomOf="@+id/balance_icon"
