--- a/app/src/main/res/layout/item_affirmation.xml
+++ b/app/src/main/res/layout/item_affirmation.xml
@@ -8,8 +8,8 @@
 
         <!-- Icon Box -->
         <FrameLayout
-            android:layout_width="84dp"
-            android:layout_height="84dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@drawable/yellow_curved_affirmation"
             android:layout_marginEnd="16dp">
 
@@ -34,8 +34,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your Affirmation Playlist"
-                android:fontFamily="@font/dmsans_medium"
-                android:textSize="16sp"
+                android:fontFamily="@font/dmsans_bold"
+                android:textSize="20sp"
                 android:textColor="#000000" />
 
             <TextView
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Create playlist &amp; practice affirmation playlist"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textColor="#666666"
                 android:fontFamily="@font/dmsans_regular"
                 android:layout_marginTop="2dp"
@@ -51,20 +51,24 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/createPlaylistButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="115dp"
+                android:layout_height="23dp"
                 android:text="Create Playlist"
+                android:textSize="10sp"
                 android:fontFamily="@font/dmsans_bold"
                 android:textColor="@color/eatright_text_color"
                 android:paddingStart="20dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
+                android:textAllCaps="false"
                 android:paddingEnd="20dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/yellow_round_bg" />
         </LinearLayout>
     <ImageView
         android:id="@+id/tool_select_button_affirmation"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:layout_gravity="center_vertical"
         android:src="@drawable/add_think_brown_icon"/>
     </LinearLayout>
