Following issues are resolved on 16 Oct 2025 1. RAD-5075: [Android][QA][Thinkright]“i” icon misaligned and oversized on Journal screen in Free Form section 2. RAD-5096: Android[(QA(124)]CheckList>Discover your eating & movement style>Do you eat your meals at the same time ecery day screen>'Set your reminder' text header is merriweather 3. RAD-5098: Android[(QA(124)]CheckList>Discover your eating & movement style>Incorrect reminder toast message displayed on “Do you eat your meals at the same time every day” screen 4. RAD-5099: [Android][QA][Onboarding] Privacy Policy Screen Heading Font Incorrect 5. RAD-5100: [Android][QA][Onboarding] Terms of Service Screen Heading Font Incorrect 6. RAD-5104: [Android][QA][Onboarding] Warning "Invalid Name" shown on empty input 7. RAD-5109: [Android][QA][My Health] Popup padding missing on left side 8. RAD-5110: [Android][QA][My Health] Unexpected "Let's do this" button on checklist popup 9. RAD-5107: [Android][QA][My Health] Close button missing on checklist info popup 10. RAD-5112: Android[(QA(124)]Mind Audit>PHQ-9 >Red Flag alert design not matching the approved design 11. RAD-5115: [Android][QA][Claim Free Trial] Close button tappable area too small 12. RAD-5117: [Android][QA][Claim Free Trial] Multiple context screens appear on multiple taps 13. RAD-5119: [Android][QA][Quicklink] User lands in Quicklink instead of Checklist after tapping popup button 14. RAD-5127: [Android][QA][Quicklink] Plus icon replaced by cross icon after closing Quicklink

--- a/app/src/main/res/layout/bottomsheet_food_schedule_reminder.xml
+++ b/app/src/main/res/layout/bottomsheet_food_schedule_reminder.xml
@@ -19,17 +19,18 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/close_dialog_affirmation" />
+            android:src="@drawable/close_breathwork" />
 
         <TextView
             android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:text="Set Your Reminder"
             android:textColor="@color/txt_color_header"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginTop="16dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
