--- a/app/src/main/res/layout/activity_begin_my_free_trial.xml
+++ b/app/src/main/res/layout/activity_begin_my_free_trial.xml
@@ -21,8 +21,9 @@
 
             <ImageView
                 android:id="@+id/ivDialogClose"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:padding="6dp"
                 android:src="@drawable/close_breathwork"
                 android:layout_alignParentEnd="true" />
 
