--- a/app/src/main/res/layout/dialog_checklist_questions.xml
+++ b/app/src/main/res/layout/dialog_checklist_questions.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/bg_food_item"
+    android:paddingHorizontal="8dp"
     android:gravity="center">
 
     <LinearLayout
