Mind audit bugs fixed

--- a/app/src/main/res/layout/activity_mind_audit_result.xml
+++ b/app/src/main/res/layout/activity_mind_audit_result.xml
@@ -208,6 +208,30 @@
 
                     </RelativeLayout>
 
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:id="@+id/img_scorebar_cas"
+                        android:src="@drawable/img_cas_scorebar"
+                        android:layout_height="wrap_content"/>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:id="@+id/img_scorebar_dass21"
+                        android:src="@drawable/img_dass21_scorebar"
+                        android:layout_height="wrap_content"/>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:id="@+id/img_scorebar_gad7"
+                        android:src="@drawable/img_gad7_scorebar"
+                        android:layout_height="wrap_content"/>
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:id="@+id/img_scorebar_phq9"
+                        android:src="@drawable/img_phq9_scorebar"
+                        android:layout_height="wrap_content"/>
+
 
                     <LinearLayout
                         android:id="@+id/scoreBarContainer"
