--- a/app/src/main/res/layout/item_breakfast_meal_logs_ai.xml
+++ b/app/src/main/res/layout/item_breakfast_meal_logs_ai.xml
@@ -43,7 +43,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:visibility="visible"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
+                android:background="@drawable/rounded_image_bg"
+                android:clipToOutline="true"
                 android:src="@drawable/green_circle" />
 
             <TextView
