Following issues resolved on 18 Oct 2025 1. RAD-5139:   Android[(QA(124)]>ThinkRight>Breathing>landing screen bookmark icon showing 2. RAD-5141: Android[(QA(124)]>ThinkRight>Breathing>landing screen> button size is small 3. RAD-5157: [Android][QA][Journal] Tooltip wrongly present throughout Journal module 4. RAD-5159: [Android][QA][Mind Audit] Missing text on Red Flag screen when selecting Chandigarh, India 5. RAD-5158: [Android][QA][Mind Audit] UK and India Red Flag screens are identical in PHP 9 test 6. RAD-5164: [Android][QA][Profile] No feedback when tapping on Saved Items with none available 7. RAD-5167: [Android][QA][Checklist] Padding issue in heading on Discover Your Eating questionnaire question 7

--- a/app/src/main/res/layout/activity_saved_item_list.xml
+++ b/app/src/main/res/layout/activity_saved_item_list.xml
@@ -66,6 +66,17 @@
 
         <include layout="@layout/loader_layout" />
 
+        <TextView
+            android:id="@+id/tvNoData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Data Available"
+            android:gravity="center"
+            android:fontFamily="@font/dmsans_bold"
+            android:textSize="@dimen/textsize_large18sp"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSavedItems"
             android:layout_width="match_parent"
