--- a/app/src/main/res/layout/activity_breathwork_session.xml
+++ b/app/src/main/res/layout/activity_breathwork_session.xml
@@ -26,7 +26,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_save_article"
-            android:visibility="visible" />
+            android:visibility="gone" />
     </RelativeLayout>
 
     <LinearLayout
@@ -328,7 +328,7 @@
 
             <Button
                 android:id="@+id/btnContinue"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
