--- a/app/src/main/res/layout/activity_red_flag_alert.xml
+++ b/app/src/main/res/layout/activity_red_flag_alert.xml
@@ -90,7 +90,7 @@
                     android:id="@+id/tvCountry"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="India"
+                    android:text="United Kingdom"
                     android:gravity="center_horizontal"
                     android:textSize="16sp"
                     android:fontFamily="@font/dmsans_regular"
